--- a/Agregar-herramienta impacto.html
+++ b/Agregar-herramienta impacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agregar Herramienta</title>
+    <title>Agregar zunga</title>
     <link rel="stylesheet" href="estilosagregar3.css">
 </head>
 <body class="grid-container">
@@ -67,4 +67,5 @@
     <script src="agregar_herramienta-impacto.js"></script>
     <script src="accesibilidad.js"></script>
 </body>
+
 </html>
