--- a/Agregar-herramienta impacto.html
+++ b/Agregar-herramienta impacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agregar zunga</title>
+    <title>Agregar ñaerfeaijfr</title>
     <link rel="stylesheet" href="estilosagregar3.css">
 </head>
 <body class="grid-container">
@@ -69,3 +69,4 @@
 </body>
 
 </html>
+
